style.css
/* #region global definitions */
.d_none {
    display: none;
}

/* .scroll_none {
    overflow-y: hidden;
} */

p {
    color: var(--color-font-dark);
    font-family: 'Palanquin';
    font-weight: 500;
    line-height: 120%;
    font-size: 16px;
}

h2 {
    font-size: 32px;
    color: var(--color-bg-accent);
    font-family: 'Palanquin';
    font-weight: 700;
    line-height: 120%;
}

h3 {
    font-size: 24px;
    color: var(--color-font-dark);
    font-family: 'Palanquin';
    font-weight: 600;
    line-height: 100%;
}

ul {
    list-style-type: none;
}
/* #endregion global definitions */

.hero {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-inline: 16px;
    padding-top: 24px;
    width: 100%;

    .hero_img_wrapper {
        position: relative;
        margin-bottom: 100px;

        .hero_img {
            width: calc(100svw - 32px);
            height: calc(100svw - 32px);
            object-fit: cover;
            border-radius: 16px;
        }

        .hero_logo {
            width: var(--size-logo-hero);
            height: var(--size-logo-hero);
            border-radius: 50%;
            border: 13px solid var(--color-bg-accent);
            background-color: var(--color-bg-accent);
            position: absolute;
            bottom: 0;
            left: 50%;
            transform: translateX(-50%) translateY(50%);
        }
    }

    .rating_stats_wrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 16px;

        .rating_stats {
            display: flex;
            justify-content: space-evenly;
            gap: 5px;
            padding-block: 5px;
            background-color: var(--color-bg-accent-strong);
            border-radius: 4px;
            width: 120px;
        }

        h1 {
            font-family: 'Palanquin Dark';
            font-weight: 700;
            font-size: 40px;
            color: var(--color-font-dark);

            span {
                color: var(--color-bg-shell);
            }
        }
    }

    p {
        font-family: 'Palanquin';
        font-weight: 700;
        font-size: 22px;
        color: var(--color-font-dark);
        text-align: center;
    }

    .rating {
        font-family: 'Palanquin Dark';
        font-size: 20px;
        font-weight: 400;
    }

    .rating_counter {
        width: 40px;
        font-family: 'Palanquin';
        font-size: 18px;
        font-weight: 400;
        color: var(--color-font-weak);
    }
}

.content_main {
    display: flex;
    flex-direction: column;
    align-items: space-between;
    justify-content: space-between;
    position: relative;
}

.content_wrapper {
    width: 100%;

    .category_content_wrapper {
        margin-top: calc(var(--height-category) + 32px);
    }

    .category_headline_wrapper {
        height: var(--height-category);
        padding-top: calc(var(--height-category) - var(--height-category_headline));

        width: 100dvw;
        position: absolute;
        left: 50%;
        transform: translateX(-50vw);

        .category_headline {
            width: 100%;
            height: 100%;
            background-color: var(--color-bg-shell);

            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;

            position: relative;

            img {
                position: absolute;
                bottom: calc(var(--height-category_headline) - 16px);

                width: var(--size-category-icon-mobile);
                height: var(--size-category-icon-mobile);
                object-fit: cover;
            }

            h2 {
                color: var(--color-font-bright);
            }
        }
    }

    .category_content_wrapper {
        .food_item {
            background-color: var(--color-bg-accent);
            border-radius: 12px;
            padding: 10px;

            display: flex;
            flex-direction: column;
            gap: 8px;

            img {
                width: 100%;
                height: 86px;
                object-fit: cover;
                border-radius: 12px;
            }

            .food_item_description {
                display: flex;
                flex-direction: column;
                gap: 8px;

                p {
                    display: -webkit-box;
                    line-clamp: 3;
                    -webkit-line-clamp: 3;
                    -webkit-box-orient: vertical;
                    overflow: hidden;
                }

                p:hover {
                    overflow: auto;
                }
            }

            .food_item_pricing {
                margin-block: 8px;
                display: flex;
                justify-content: space-between;
                button {
                    background-color: white;
                    padding: 5px 8px;
                    border-radius: 20px;
                    p {
                        font-weight: 600;
                    }
                }

                button:hover {
                    p {
                        color: var(--color-bg-shell);
                    }
                    box-shadow: 1px 2px 2px 0px #00000033;
                }
            }
        }
    }
}

/* #region basket */
.basket_wrapper {
    position: fixed;
    width: 94%;
    height: var(--height-basket-mobile);

    .basket {
        height: var(--height-basket-mobile);
        max-height: var(--height-basket-mobile);
        width: 100%;
        background-color: var(--color-bg-overlay);
        border-top-left-radius: 30px;
        border-top-right-radius: 30px;

        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 16px;

        padding-inline: 22px;
        padding-block: 40px;

        h2 {
            color: var(--color-bg-accent);
        }

        table {
            padding: 16px;
            border-collapse: collapse;
            gap: 50px;

            tr {
                display: flex;
                justify-content: space-between;
                align-items: center;
            }

            th,
            td {
                padding-block: 4px;
                text-align: left;
            }
        }

        hr {
            width: 100%;
            border: 2px solid white;
            margin-block: 12px;
        }

        .basket_list {
            display: flex;
            flex-direction: column;
            gap: 10px;
            width: 100%;
            overflow-y: auto;

            .basket_item {
                width: 100%;
                border-radius: 20px;
                background-color: var(--color-bg-accent);
                padding: 16px;
                table {
                    width: 100%;

                    th {
                        font-size: 22px;
                        font-weight: 700;
                        color: var(--color-font-dark);
                        font-family: 'Palanquin';
                        line-height: 120%;
                    }

                    td > p,
                    button {
                        font-size: 24px;
                        font-weight: 600;
                        color: var(--color-font-dark);
                        font-family: 'Palanquin';
                        line-height: 120%;
                    }

                    .basket_item_count {
                        display: flex;
                        align-items: flex-end;
                        gap: 4px;
                    }
                }

                .button_trash {
                    width: 24px;
                    height: 24px;
                }
            }
        }

        .payment_table,
        .payment_table_wrapper,
        .payment_total {
            width: 100%;

            td {
                font-size: 20px;
                font-weight: 600;
                color: var(--color-font-bright);
                font-family: 'Palanquin';
                line-height: 120%;
            }

            th {
                font-size: 22px;
                font-weight: 700;
                color: var(--color-font-bright);
                font-family: 'Palanquin';
                line-height: 120%;
            }
        }

        .button_buy {
            padding-inline: 24px;
            padding-block: 12px;
            height: 50px;
            border-radius: 60px;
            background-color: var(--color-bg-shell);

            p {
                font-size: 24px;
                font-weight: 700;
                color: var(--color-font-bright);
                font-family: 'Palanquin';
                line-height: 120%;
            }
        }
    }
}
/* #endregion basket */
@media screen and (min-width: 769px) {
    .scroll_none {
        overflow-y: auto;
    }

    .content_main {
        flex-direction: row;
        align-items: flex-start;
    }

    .basket_wrapper {
        width: var(--width-basket);
        padding-top: calc(var(--height-category) - var(--height-category_headline));
        position: static;
        height: 100svw;

        .basket {
            height: auto;
            width: 100%;
            background-color: var(--color-bg-overlay);
            position: sticky;
            top: 0;

            border-top-right-radius: 0;
            border-bottom-left-radius: 30px;
        }
    }

    .content_wrapper {
        width: calc(100% - var(--width-basket));

        .category_headline_wrapper {
            .category_headline {
                flex-direction: row;
                justify-content: flex-start;

                img {
                    width: var(--size-category-icon-desktop);
                    height: var(--size-category-icon-desktop);
                    bottom: 0;
                    left: var(--padding-category-headline);
                }

                h2 {
                    position: relative;
                    left: calc(var(--padding-category-headline) + 120px);
                }
            }
        }

        .category_content_wrapper {
            .food_item {
                flex-direction: row;
                justify-content: space-between;
                height: 140px;

                img {
                    height: 100%;
                    min-width: 30%;
                }

                .food_item_pricing {
                    flex-direction: column;
                    align-items: flex-end;
                    button {
                        min-width: 115px;
                    }
                }
            }
        }
    }

    .hero {
        padding-top: 0;
        padding-inline: 0;
        .hero_img_wrapper {
            .hero_img {
                width: 100%;
                height: 100%;
                border-radius: 0;
            }

            .hero_logo {
                transform: translateX(-50%) translateY(33%);
            }
        }

        .rating_stats_wrapper {
            flex-direction: row;
            .rating_stats {
                order: 1;
            }
        }
    }
}

@media screen and (min-width: 1441px) {
    .hero {
        padding-inline: calc(50% - 720px);
    }
}

